--- a/Gppbox/sfml_test.vcxproj
+++ b/Gppbox/sfml_test.vcxproj
@@ -165,6 +165,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bloom.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="SecondOrderDynamics.cpp" />
     <ClCompile Include="Ennemy.cpp" />
@@ -185,6 +186,7 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="Bloom.hpp" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="C.hpp" />
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="SecondOrderDynamics.h" />
