--- a/Gppbox/imgui.ini
+++ b/Gppbox/imgui.ini
@@ -1,5 +1,10 @@
 [Window][Debug##Default]
-Pos=1398,84
-Size=409,384
+Pos=1409,30
+Size=410,384
+Collapsed=0
+
+[Window][Test]
+Pos=60,60
+Size=80,77
 Collapsed=0
 
