--- a/Gppbox/sfml_test.vcxproj
+++ b/Gppbox/sfml_test.vcxproj
@@ -186,10 +186,10 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="Bloom.hpp" />
-    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Bullet.hpp" />
     <ClInclude Include="C.hpp" />
-    <ClInclude Include="CameraManager.h" />
-    <ClInclude Include="SecondOrderDynamics.h" />
+    <ClInclude Include="CameraManager.hpp" />
+    <ClInclude Include="SecondOrderDynamics.hpp" />
     <ClInclude Include="Dice.hpp" />
     <ClInclude Include="Ennemy.hpp" />
     <ClInclude Include="Player.hpp" />
@@ -202,8 +202,8 @@
     <ClInclude Include="libs\imgui\imgui.h" />
     <ClInclude Include="Particle.hpp" />
     <ClInclude Include="ParticleMan.hpp" />
-    <ClInclude Include="SpriteEnnemy.h" />
-    <ClInclude Include="SpritePlayer.h" />
+    <ClInclude Include="SpriteEnnemy.hpp" />
+    <ClInclude Include="SpritePlayer.hpp" />
     <ClInclude Include="sys.hpp" />
   </ItemGroup>
   <ItemGroup>
